--- a/styles/global.css
+++ b/styles/global.css
@@ -7,7 +7,8 @@ html {
 }
 
 body {
-  font-family: 'Iosevka Nerd Font';
+  font-family: "Open Sans", serif;
   font-size: 16px;
   font-weight: normal;
+  font-style: normal;
 }
